# gingerbase

./: .gitignore  API.json  ChangeLog  IBM-license-blacklist  Makefile.am  __init__.py  autogen.sh  check_spec_errors.sh  config.py.in  configure.ac  disks.py  gingerbase.conf  gingerbase.py  i18n.py  index.html  lscpu.py  mockmodel.py  netinfo.py  params.json  portageparser.py  repositories.py  swupdate.py  utils.py  yumparser.py
contrib/: Makefile.am  check_i18n.py  gingerbase.spec.fedora.in  gingerbase.spec.suse.in  make-deb.sh.in
control/: __init__.py  config.py  cpuinfo.py  debugreports.py  host.py  packagesupdate.py  smt.py  storage_devs.py
docs/: API.md  Makefile.am  README-HostStats-configuration.md  README.md
downloads/: ginger-base-2.0.0-0.el7.noarch.rpm  ginger-base-2.0.0-0.fc23.noarch.rpm  ginger-base-2.0.0-0.noarch.deb  ginger-base-2.0.0-0.noarch.rpm  ginger-base-2.1.0-0.el7.noarch.rpm  ginger-base-2.1.0-0.fc23.noarch.rpm  ginger-base-2.1.0-0.noarch.deb  ginger-base-2.1.0-0.noarch.rpm  ginger-base-2.2.0-0.el7.noarch.rpm  ginger-base-2.2.0-0.fc23.noarch.rpm  ginger-base-2.2.0-0.noarch.deb  ginger-base-2.2.0-0.noarch.rpm  ginger-base-2.2.1-0.el7.centos.noarch.rpm  ginger-base-2.2.1-0.fc24.noarch.rpm  ginger-base-2.2.1-0.noarch.deb  ginger-base-2.2.1-0.noarch.rpm  ginger-base-2.2.2-0.el7.centos.noarch.rpm  ginger-base-2.2.2-0.fc25.noarch.rpm  ginger-base-2.2.2-0.noarch.deb  ginger-base-2.2.2-0.noarch.rpm  (+5 more)
model/: Makefile.am  __init__.py  config.py  config.py.in  cpuinfo.py  debugreports.py  host.py  model.py  packagesupdate.py  smt.py  storage_devs.py
(+93 files in other folders)
